Creating variables, adding styles to header

--- a/index.html
+++ b/index.html
@@ -9,17 +9,21 @@
     <title>Software http-equiv</title>
 </head>
 <body>
-    <header class="header">
+    <header class="header"> 
+        <div  class="header__img">
+            <img src="logo.svg" alt="logo Sowtware Hut">
+        </div>
         <nav class="header__nav">  
             <ul class="header__nav__list">
                 <li><a class="header__nav__list__element" href="#">Solutions</a></li>
                 <li><a class="header__nav__list__element" href="#">Team</a></li>
                 <li><a class="header__nav__list__element" href="#">Career</a></li>
+                <li><a class="header__nav__list__element" href="#">4Fun</a></li>
                 <li><a class="header__nav__list__element" href="#">Speaking</a></li>
                 <li><a class="header__nav__list__element" href="#">Blog</a></li>
             </ul>
-                <button>Estimate Project</button>
-            </nav> 
+            <button class="header__nav__button">Estimate Project</button>
+        </nav>
     </header>
     <div style="height: 2500px; margin-top: 50px;">
         <section>
