--- a/index.html
+++ b/index.html
@@ -25,11 +25,9 @@
             <button class="header__nav__button">Estimate Project</button>
         </nav>
     </header>
-    <div style="height: 2500px; margin-top: 50px;">
-        <section>
-                DU
+        <section class="bcgimage">
+            <img src="abstract.jpg" alt="yellow">
         </section>
-    </div>
     <footer>
 
     </footer>
