Creating texts and image on top bcg image

--- a/index.html
+++ b/index.html
@@ -9,25 +9,36 @@
     <title>Software http-equiv</title>
 </head>
 <body>
-    <header class="header"> 
-        <div  class="header__img">
-            <img src="logo.svg" alt="logo Sowtware Hut">
-        </div>
-        <nav class="header__nav">  
-            <ul class="header__nav__list">
-                <li><a class="header__nav__list__element" href="#">Solutions</a></li>
-                <li><a class="header__nav__list__element" href="#">Team</a></li>
-                <li><a class="header__nav__list__element" href="#">Career</a></li>
-                <li><a class="header__nav__list__element" href="#">4Fun</a></li>
-                <li><a class="header__nav__list__element" href="#">Speaking</a></li>
-                <li><a class="header__nav__list__element" href="#">Blog</a></li>
-            </ul>
-            <button class="header__nav__button">Estimate Project</button>
-        </nav>
-    </header>
-        <section class="bcgimage">
-            <img src="abstract.jpg" alt="yellow">
+    <div class="top_section">
+        <header class="header"> 
+            <div  class="header__img">
+                <img src="/images/logo.svg" alt="logo Sowtware Hut">
+            </div>
+            <nav class="header__nav">  
+                <ul class="header__nav__list">
+                    <li><a class="header__nav__list__element" href="#">Solutions</a></li>
+                    <li><a class="header__nav__list__element" href="#">Team</a></li>
+                    <li><a class="header__nav__list__element" href="#">Career</a></li>
+                    <li><a class="header__nav__list__element" href="#">4Fun</a></li>
+                    <li><a class="header__nav__list__element" href="#">Speaking</a></li>
+                    <li><a class="header__nav__list__element" href="#">Blog</a></li>
+                </ul>
+                    <button class="header__nav__button">Estimate Project</button>
+            </nav>
+        </header>
+        <section>
+            <div class="bcgimage">
+                <div class="bcgimage__content">
+                    <div class="bcgimage__content__top_text" >Various services for Nordic Tech House (NTH)</div>
+                    <div class="bcgimage__content__ground_text" >STOCKHOLM, SWEDEN   |   NORDICTECHHOUSE.COM</div>
+                    <img class="bcgimage__content__image"  src="/images/house.jpg" alt="House text">
+
+                </div>
+            </div>
+
         </section>
+        
+    </div>
     <footer>
 
     </footer>
