Adding first section in main, crating scss to it

--- a/index.html
+++ b/index.html
@@ -26,19 +26,29 @@
                     <button class="header__nav__button">Estimate Project</button>
             </nav>
         </header>
-        <section>
+        <section class="section_image">
             <div class="bcgimage">
                 <div class="bcgimage__content">
                     <div class="bcgimage__content__top_text" >Various services for Nordic Tech House (NTH)</div>
                     <div class="bcgimage__content__ground_text" >STOCKHOLM, SWEDEN   |   NORDICTECHHOUSE.COM</div>
                     <img class="bcgimage__content__image"  src="/images/house.jpg" alt="House text">
-
                 </div>
             </div>
-
-        </section>
-        
+        </section> 
     </div>
+    <main>
+        <div class="main_container">
+            <div class="main_container__first_section">
+                <div class="main_container__first_section__employees">Number of employees:</div>
+                <div class="main_container__first_section__employees_num">4</div>
+                <div class="main_container__first_section__year_of_establishment">Year of establishment:</div>
+                <div class="main_container__first_section__2017">2017</div>
+                <div class="main_container__first_section__industry">Industry:</div>
+                <div class="main_container__first_section__it">IT investments</div>
+            </div>
+
+        </div>
+    </main>
     <footer>
 
     </footer>
