Fixing grid on first big image

--- a/index.html
+++ b/index.html
@@ -46,6 +46,10 @@
                 <div class="main_container__first_section__industry">Industry:</div>
                 <div class="main_container__first_section__it">IT investments</div>
             </div>
+            <div class="main_container__second_section">
+
+            </div>
+
 
         </div>
     </main>
