FInished section with logos

--- a/index.html
+++ b/index.html
@@ -47,7 +47,22 @@
                 <div class="main_container__first_section__it">IT investments</div>
             </div>
             <div class="main_container__second_section">
-
+                <div class="main_container__second_section__services">
+                    Services provided:
+                </div>
+                <div class="main_container__second_section__tech_house">
+                    Nordic Tech House, is Venture Capital from Sweden dealing with supporting start-up projects from the side of business consulting, i.e. management, marketing, finance and IT
+                </div>
+                <div class="main_container__second_section__technology">
+                    Technology used:
+                </div>
+                <div class="main_container__second_section__logos">
+                    <img src="/images/angular.PNG" alt="Angular logo">
+                    <img src="/images/azure.PNG" alt="Azure logo">
+                    <img src="/images/windows.PNG" alt="Windows logo">
+                    <img src="/images/vr.PNG" alt="VR logo">
+                    <img src="/images/cisco.PNG" alt="Cisco logo">
+                </div>
             </div>
 
 
