Creating section with ceo and lorem text

--- a/index.html
+++ b/index.html
@@ -64,6 +64,18 @@
                     <img src="/images/cisco.PNG" alt="Cisco logo">
                 </div>
             </div>
+            <div class="main_container__lorem_section">
+                <div class="main_container__lorem_section__container">
+                    <img class="main_container__lorem_section__container__ceo" src="/images/ceo.PNG" alt="CEO">
+                </div>
+                <div>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc tincidunt egestas erat non pulvinar. Curabitur eget vulputate felis. Cras commodo nibh sit amet elit congue, at aliquet arcu blandit.
+                        Donec lectus orci, placerat eget semper et, lobortis at massa. In hac habitasse platea dictumst. 
+                    </p>
+                    <p>Linus Kaasik, CEO Nordic Tech House </p>
+                </div>
+
+            </div>
 
 
         </div>
