--- a/index.html
+++ b/index.html
@@ -1,87 +1,124 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://unpkg.com/reset-css/reset.css" />
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
     <title>Software http-equiv</title>
-</head>
-<body>
-    <div class="top_section">
-        <header class="header"> 
-            <div  class="header__img">
-                <img src="/images/logo.svg" alt="logo Sowtware Hut">
-            </div>
-            <nav class="header__nav">  
-                <ul class="header__nav__list">
-                    <li><a class="header__nav__list__element" href="#">Solutions</a></li>
-                    <li><a class="header__nav__list__element" href="#">Team</a></li>
-                    <li><a class="header__nav__list__element" href="#">Career</a></li>
-                    <li><a class="header__nav__list__element" href="#">4Fun</a></li>
-                    <li><a class="header__nav__list__element" href="#">Speaking</a></li>
-                    <li><a class="header__nav__list__element" href="#">Blog</a></li>
-                </ul>
-                    <button class="header__nav__button">Estimate Project</button>
-            </nav>
-        </header>
-        <section class="section_image">
-            <div class="bcgimage">
-                <div class="bcgimage__content">
-                    <div class="bcgimage__content__top_text" >Various services for Nordic Tech House (NTH)</div>
-                    <div class="bcgimage__content__ground_text" >STOCKHOLM, SWEDEN   |   NORDICTECHHOUSE.COM</div>
-                    <img class="bcgimage__content__image"  src="/images/house.jpg" alt="House text">
-                </div>
-            </div>
-        </section> 
-    </div>
+  </head>
+  <body>
+    <header class="header">
+      <div class="header__img">
+        <img src="/images/logo.svg" alt="logo Sowtware Hut" />
+      </div>
+      <nav class="navigation">
+        <ul class="navigation__list">
+          <li><a class="navigation__list__element" href="#">Solutions</a></li>
+          <li><a class="navigation__list__element" href="#">Team</a></li>
+          <li><a class="navigation__list__element" href="#">Career</a></li>
+          <li><a class="navigation__list__element" href="#">4Fun</a></li>
+          <li><a class="navigation__list__element" href="#">Speaking</a></li>
+          <li><a class="navigation__list__element" href="#">Blog</a></li>
+        </ul>
+        <button class="navigation__button">Estimate Project</button>
+      </nav>
+    </header>
     <main>
-        <div class="main_container">
-            <div class="main_container__first_section">
-                <div class="main_container__first_section__employees">Number of employees:</div>
-                <div class="main_container__first_section__employees_num">4</div>
-                <div class="main_container__first_section__year_of_establishment">Year of establishment:</div>
-                <div class="main_container__first_section__2017">2017</div>
-                <div class="main_container__first_section__industry">Industry:</div>
-                <div class="main_container__first_section__it">IT investments</div>
+      <div class="main_container">
+        <div class="top_section">
+          <div class="bcgimage">
+            <div class="bcgimage__content">
+              <div class="bcgimage__content__top_text">
+                Various services for Nordic Tech House (NTH)
+              </div>
+              <div class="bcgimage__content__ground_text">
+                STOCKHOLM, SWEDEN | NORDICTECHHOUSE.COM
+              </div>
+              <img
+                class="bcgimage__content__image"
+                src="/images/house.jpg"
+                alt="House text"
+              />
             </div>
-            <div class="main_container__second_section">
-                <div class="main_container__second_section__services">
-                    Services provided:
-                </div>
-                <div class="main_container__second_section__tech_house">
-                    Nordic Tech House, is Venture Capital from Sweden dealing with supporting start-up projects from the side of business consulting, i.e. management, marketing, finance and IT
-                </div>
-                <div class="main_container__second_section__technology">
-                    Technology used:
-                </div>
-                <div class="main_container__second_section__logos">
-                    <img src="/images/angular.PNG" alt="Angular logo">
-                    <img src="/images/azure.PNG" alt="Azure logo">
-                    <img src="/images/windows.PNG" alt="Windows logo">
-                    <img src="/images/vr.PNG" alt="VR logo">
-                    <img src="/images/cisco.PNG" alt="Cisco logo">
-                </div>
-            </div>
-            <div class="main_container__lorem_section">
-                <div class="main_container__lorem_section__container">
-                    <img class="main_container__lorem_section__container__ceo" src="/images/ceo.PNG" alt="CEO">
-                </div>
-                <div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc tincidunt egestas erat non pulvinar. Curabitur eget vulputate felis. Cras commodo nibh sit amet elit congue, at aliquet arcu blandit.
-                        Donec lectus orci, placerat eget semper et, lobortis at massa. In hac habitasse platea dictumst. 
-                    </p>
-                    <p>Linus Kaasik, CEO Nordic Tech House </p>
-                </div>
-
-            </div>
-
-
+          </div>
         </div>
+        <div class="section-container">
+          <div class="first_section">
+            <div class="first_section__employees">Number of employees:</div>
+            <div class="first_section__employees_num">4</div>
+            <div class="first_section__year_of_establishment">
+              Year of establishment:
+            </div>
+            <div class="first_section__2017">2017</div>
+            <div class="first_section__industry">Industry:</div>
+            <div class="first_section__it">IT investments</div>
+          </div>
+        </div>
+        <div class="section-container">
+          <div class="second_section">
+            <div class="second_section__services">Services provided:</div>
+            <div class="second_section__tech_house">
+              Nordic Tech House, is Venture Capital from Sweden dealing with
+              supporting start-up projects from the side of business consulting,
+              i.e. management, marketing, finance and IT
+            </div>
+            <div class="second_section__technology">Technology used:</div>
+            <div class="second_section__logos">
+              <div>
+                <img src="/images/angular.PNG" alt="Angular logo" />
+              </div>
+              <div>
+                <img src="/images/azure.PNG" alt="Azure logo" />
+              </div>
+              <div>
+                <img src="/images/windows.PNG" alt="Windows logo" />
+              </div>
+              <div>
+                <img src="/images/vr.PNG" alt="VR logo" />
+              </div>
+              <div>
+                <img src="/images/cisco.PNG" alt="Cisco logo" />
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="section-container">
+          <div class="lorem_section">
+            <div class="image_container">
+              <img
+                class="image_container__ceo"
+                src="/images/ceo.PNG"
+                alt="CEO"
+              />
+            </div>
+            <div class="text_container">
+              <q class="text_container__quote">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc
+                tincidunt egestas erat non pulvinar. Curabitur eget vulputate
+                felis. Cras commodo nibh sit amet elit congue, at aliquet arcu
+                blandit. Donec lectus orci, placerat eget semper et, lobortis at
+                massa. In hac habitasse platea dictumst.
+              </q>
+              <p class="text_container__sign">
+                Linus Kaasik, CEO Nordic Tech House
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
     </main>
-    <footer>
+    <footer class="footer">
+        <div class="section-container">
+            <div>
+                EXPLORE NEWSLETTER
+            </div>
 
+            <div>
+                BLOG
+            </div>
+        </div>
     </footer>
-</body>
+  </body>
 </html>
