Adding few more sections in main

--- a/index.html
+++ b/index.html
@@ -101,13 +101,63 @@
                 blandit. Donec lectus orci, placerat eget semper et, lobortis at
                 massa. In hac habitasse platea dictumst.
               </q>
-              <p class="text_container__sign">
-                Linus Kaasik, CEO Nordic Tech House
-              </p>
+              <div class="sign_container">
+                <p class="sign_container__text">
+                  Linus Kaasik, CEO Nordic Tech House
+                </p>
+                <div class="sign_container__sign">
+                  “
+                </div>
+              </div>
             </div>
-          </div>
         </div>
       </div>
+      <div class="section-container">
+        <div class="stage1_section">
+          <p class="stage1_section__stage1">Stage 1</p>
+          <p class="stage1_section__longtext">
+            Nordic Tech House, is Venture Capital from Sweden dealing with supporting start-up projects from the side
+            of business consulting, i.e. management, marketing, finance and IT
+          </p>
+          <p class="stage1_section__bialystok">
+            For the Białystok company, cooperation on the Nordic Tech House project was quite demanding not only due to 
+            the first implementation at Kentico CMS, but also due to the strict time frame of the project related to the 
+            previously planned promotional event. The website was created on time. Uses the potential of the new Kentico Cloud 
+            system, in particular by including multi-channel and content matching, making the message readable on all modern 
+            devices.
+          </p>
+        </div>
+      </div>
+      <div class="section-container">
+          <img class="section-container__image" src="/images/bigfoto.PNG" alt="Big">
+      </div>
+      <div class="section-container">
+        <div class="twofotos__container">
+          <img class="twofotos__container__mozaika" src="/images/mozaika.PNG" alt="Mozaika">
+          <img class="twofotos__container__layer" src="/images/layer.PNG" alt="Layer">
+        </div>
+      </div>
+
+      <div class="section-container">
+        <div class="stage1_section">
+          <p class="stage1_section__stage1">Stage 3</p>
+          <p class="stage1_section__longtext">
+            Nordic Tech House, is Venture Capital from Sweden dealing with supporting start-up projects from the side
+            of business consulting, i.e. management, marketing, finance and IT
+          </p>
+          <p class="stage1_section__bialystok">
+            For the Białystok company, cooperation on the Nordic Tech House project was quite demanding not only due to 
+            the first implementation at Kentico CMS, but also due to the strict time frame of the project related to the 
+            previously planned promotional event. The website was created on time. Uses the potential of the new Kentico Cloud 
+            system, in particular by including multi-channel and content matching, making the message readable on all modern 
+            devices.
+          </p>
+        </div>
+      </div>
+      <div class="section-container">
+        <img class="section__container__paralax" src="/images/paralax.PNG" alt="Layer">
+      </div> 
+
     </main>
     <footer class="footer">
         <div class="section-container">
