Fixing images routes

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <header class="header">
       <div class="header__img">
-        <img src="/images/logo.svg" alt="logo Sowtware Hut" />
+        <img src="images/logo.svg" alt="logo Sowtware Hut" />
       </div>
       <nav class="navigation">
         <ul class="navigation__list">
@@ -38,7 +38,7 @@
               </div>
               <img
                 class="bcgimage__content__image"
-                src="/images/house.jpg"
+                src="images/house.jpg"
                 alt="House text"
               />
             </div>
@@ -67,19 +67,19 @@
             <div class="second_section__technology">Technology used:</div>
             <div class="second_section__logos">
               <div>
-                <img src="/images/angular.PNG" alt="Angular logo" />
+                <img src="images/angular.PNG" alt="Angular logo" />
               </div>
               <div>
-                <img src="/images/azure.PNG" alt="Azure logo" />
+                <img src="images/azure.PNG" alt="Azure logo" />
               </div>
               <div>
-                <img src="/images/windows.PNG" alt="Windows logo" />
+                <img src="images/windows.PNG" alt="Windows logo" />
               </div>
               <div>
-                <img src="/images/vr.PNG" alt="VR logo" />
+                <img src="images/vr.PNG" alt="VR logo" />
               </div>
               <div>
-                <img src="/images/cisco.PNG" alt="Cisco logo" />
+                <img src="images/cisco.PNG" alt="Cisco logo" />
               </div>
             </div>
           </div>
@@ -89,7 +89,7 @@
             <div class="image_container">
               <img
                 class="image_container__ceo"
-                src="/images/ceo.PNG"
+                src="images/ceo.PNG"
                 alt="CEO"
               />
             </div>
@@ -113,13 +113,13 @@
         </div>
       </div>
       <div class="section-container">
-        <div class="stage1_section">
-          <p class="stage1_section__stage1">Stage 1</p>
-          <p class="stage1_section__longtext">
+        <div class="stage_section">
+          <p class="stage_section__stage">Stage 1</p>
+          <p class="stage_section__longtext">
             Nordic Tech House, is Venture Capital from Sweden dealing with supporting start-up projects from the side
             of business consulting, i.e. management, marketing, finance and IT
           </p>
-          <p class="stage1_section__bialystok">
+          <p class="stage_section__bialystok">
             For the Białystok company, cooperation on the Nordic Tech House project was quite demanding not only due to 
             the first implementation at Kentico CMS, but also due to the strict time frame of the project related to the 
             previously planned promotional event. The website was created on time. Uses the potential of the new Kentico Cloud 
@@ -129,23 +129,23 @@
         </div>
       </div>
       <div class="section-container">
-          <img class="section-container__image" src="/images/bigfoto.PNG" alt="Big">
+          <img class="section-container__image" src="images/bigfoto.PNG" alt="Big">
       </div>
       <div class="section-container">
         <div class="twofotos__container">
-          <img class="twofotos__container__mozaika" src="/images/mozaika.PNG" alt="Mozaika">
-          <img class="twofotos__container__layer" src="/images/layer.PNG" alt="Layer">
+          <img class="twofotos__container__mozaika" src="images/mozaika.PNG" alt="Mozaika">
+          <img class="twofotos__container__layer" src="images/layer.PNG" alt="Layer">
         </div>
       </div>
 
       <div class="section-container">
-        <div class="stage1_section">
-          <p class="stage1_section__stage1">Stage 3</p>
-          <p class="stage1_section__longtext">
+        <div class="stage_section">
+          <p class="stage_section__stage">Stage 3</p>
+          <p class="stage_section__longtext">
             Nordic Tech House, is Venture Capital from Sweden dealing with supporting start-up projects from the side
             of business consulting, i.e. management, marketing, finance and IT
           </p>
-          <p class="stage1_section__bialystok">
+          <p class="stage_section__bialystok">
             For the Białystok company, cooperation on the Nordic Tech House project was quite demanding not only due to 
             the first implementation at Kentico CMS, but also due to the strict time frame of the project related to the 
             previously planned promotional event. The website was created on time. Uses the potential of the new Kentico Cloud 
@@ -155,7 +155,7 @@
         </div>
       </div>
       <div class="section-container">
-        <img class="section__container__paralax" src="/images/paralax.PNG" alt="Layer">
+        <img class="section__container__paralax" src="images/paralax.PNG" alt="Layer">
       </div> 
 
     </main>
