Adding another stage section and image route fix

--- a/index.html
+++ b/index.html
@@ -129,6 +129,23 @@
         </div>
       </div>
       <div class="section-container">
+        <div class="stage_section">
+          <p class="stage_section__stage">Stage 2</p>
+          <p class="stage_section__longtext">
+            Nordic Tech House, is Venture Capital from Sweden dealing with supporting start-up projects from the side
+            of business consulting, i.e. management, marketing, finance and IT
+          </p>
+          <p class="stage_section__bialystok">
+            For the Białystok company, cooperation on the Nordic Tech House project was quite demanding not only due to 
+            the first implementation at Kentico CMS, but also due to the strict time frame of the project related to the 
+            previously planned promotional event. The website was created on time. Uses the potential of the new Kentico Cloud 
+            system, in particular by including multi-channel and content matching, making the message readable on all modern 
+            devices.
+          </p>
+        </div>
+      </div>
+      
+      <div class="section-container">
           <img class="section-container__image" src="images/bigfoto.PNG" alt="Big">
       </div>
       <div class="section-container">
