FIxing abstract.png route

--- a/index.html
+++ b/index.html
@@ -172,6 +172,9 @@
         </div>
       </div>
       <div class="section-container">
+        <div></div>
+      </div>
+      <div class="section-container">
         <img class="section__container__paralax" src="images/paralax.PNG" alt="Layer">
       </div> 
 
