Creating numbers section with mixin

--- a/index.html
+++ b/index.html
@@ -172,7 +172,24 @@
         </div>
       </div>
       <div class="section-container">
-        <div></div>
+        <div class="numbers_section">
+          <div class="numbers_section__one">
+            <div class="numbers_section__one number">280</div>
+            <div class="numbers_section__one empty_shape"></div>
+            <div class="numbers_section__one text">number of hours spent on all projects for NTH</div>
+          </div>
+          <div class="numbers_section__two">
+            <div class="numbers_section__two number">256</div>
+            <div class="numbers_section__two  empty_shape"></div>
+            <div class="numbers_section__two text" >twocups of coffee we had with this client</div>
+          </div>
+          <div class="numbers_section__three">
+            <div class="numbers_section__three number">200</div>
+            <div class="numbers_section__three empty_shape"></div>
+            <div class="numbers_section__three text">number of people involved in all projects</div>
+          </div>
+        </div>
+      
       </div>
       <div class="section-container">
         <img class="section__container__paralax" src="images/paralax.PNG" alt="Layer">
