Adding bialystok .alone section

--- a/index.html
+++ b/index.html
@@ -189,6 +189,16 @@
             <div class="numbers_section__three text">number of people involved in all projects</div>
           </div>
         </div>
+        <div class="section-container">
+          <div class="stage_section">
+            <p class="stage_section__bialystok alone">
+              For the Białystok company, cooperation on the Nordic Tech House project was quite demanding not only due to 
+              the first implementation at Kentico CMS, but also due to the strict time frame of the project related to the 
+              previously planned promotional event. The website was created on time. Uses the potential of the new Kentico Cloud 
+              system, in particular by including multi-channel and content matching, making the message readable on all modern 
+              devices.
+            </p>
+          </div>
       
       </div>
       <div class="section-container">
