--- a/index.html
+++ b/index.html
@@ -203,7 +203,26 @@
       </div>
       <div class="section-container">
         <img class="section__container__paralax" src="images/paralax.PNG" alt="Layer">
-      </div> 
+      </div>
+      <div class="section-container">
+        <div class="section-container-box">
+          <div class="stage_section">
+            <p class="stage_section__stage">Stage 4</p>
+            <p class="stage_section__longtext">
+              Nordic Tech House, is Venture Capital from Sweden dealing with supporting start-up projects from the side
+              of business consulting, i.e. management, marketing, finance and IT
+            </p>
+            <p class="stage_section__bialystok">
+            For the Białystok company, cooperation on the Nordic Tech House project was quite demanding not only due to 
+            the first implementation at Kentico CMS, but also due to the strict time frame of the project related to the 
+            previously planned promotional event. The website was created on time. Uses the potential of the new Kentico Cloud 
+            system, in particular by including multi-channel and content matching, making the message readable on all modern 
+            devices.
+          </p>
+        </div>
+      </div>
+      </div>
+      
 
     </main>
     <footer class="footer">
