Fixing paddings between sections

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
         </div>
       </div>
       
-      <div class="section-container">
+      <div class="section-container big_image">
           <img class="section-container__image" src="images/bigfoto.PNG" alt="Big">
       </div>
       <div class="section-container">
@@ -201,7 +201,7 @@
           </div>
       
       </div>
-      <div class="section-container">
+      <div class="section-container paralax_margin_top">
         <img class="section__container__paralax" src="images/paralax.PNG" alt="Layer">
       </div>
       <div class="section-container">
