Fixing rwd in header

--- a/index.html
+++ b/index.html
@@ -222,6 +222,15 @@
         </div>
       </div>
       </div>
+      <div class="section-container">
+        <div class="section_inv_mobile">
+          <p class="section_inv_mobile__inv">IT investments</p>
+          <p class="section_inv_mobile__mobile">mobile aplication</p>
+        </div>
+        <div>
+
+        </div>
+      </div>
       
 
     </main>
