--- a/index.html
+++ b/index.html
@@ -49,15 +49,19 @@
         </div>
         <div class="section-container">
           <div class="first_section">
-            <div class="first_section__employees">Number of employees:</div>
-            <div class="first_section__employees_num">4</div>
-            <div class="first_section__year_of_establishment">
-              Year of establishment:
+            <div class="wrapper wrapper_one">
+              <div class="wrapper__title">Number of employees:</div>
+              <div class="wrapper__info">4</div>
             </div>
-            <div class="first_section__2017">2017</div>
-            <div class="first_section__industry">Industry:</div>
-            <div class="first_section__it">IT investments</div>
-          </div>
+            <div class="wrapper wrapper_two">
+              <div class="wrapper__title">Year of establishment:</div>
+              <div class="wrapper__info">2017</div>
+            </div>
+            <div class="wrapper wrapper_three">
+              <div class="wrapper__title">Industry:</div>
+              <div class="wrapper__info">IT investments</div>
+            </div>
+            
         </div>
         <div class="section-container">
           <div class="second_section">
